Fix: Navigator Alignment

--- a/src/App.scss
+++ b/src/App.scss
@@ -28,7 +28,7 @@ $catalog-width: 650px;
 $catalog-height: 480px;
 
 $inventory-width: 528px;
-$inventory-height: 320px;
+$inventory-height: 370px;
 
 $navigator-width: 420px;
 $navigator-height: 440px;
