--- a/src/assets/styles/index.scss
+++ b/src/assets/styles/index.scss
@@ -25,7 +25,7 @@ input[type=number] {
   -moz-appearance: textfield;
 }
 .rounded {
-  border-radius: 0.5rem!important;
+  border-radius: 0.5rem;
 }
 .btn-primary{
   color: #fff;
